<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">
        <TextView
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Word"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:id="@+id/word"/>
        <TextView
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Origin"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@+id/word"
            android:layout_marginStart="8dp"
            android:id="@+id/origin"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/phoneticView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/origin"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meaningsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/phoneticView"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>